brute force fix for height collapsing

--- a/src/scss/_Auth.scss
+++ b/src/scss/_Auth.scss
@@ -24,6 +24,7 @@
 
     label {
       color: $coolgray;
+      margin-top: 5px;
     }
 
     select, input {
@@ -41,11 +42,19 @@
 
     .birthday {
       display: inline;
-      width: 45px;
+      height: 2rem;
+    }
+
+    #month, #day {
+      width: 50px;
     }
 
     #year {
-      width: 55px;
+      width: 60px;
+    }
+
+    #month, #year {
+      margin-right: 5px;
     }
 
     button {
